--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ __pycache__/
 
 # Ignorar arquivos de log
 *.log
+
+# Ignorar a pasta .idea (onde PyCharm armazena suas configurações de projeto)
+.idea/
+
+# Ignorar arquivos de configuração específicos do PyCharm
+*.iml
