--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ click==8.1.8
 fastapi==0.95.2
 filelock==3.18.0
 fsspec==2025.3.0
-huggingface-hub==0.29.3
+h11==0.14.0
+huggingface-hub==0.30.1
 idna==3.10
 Jinja2==3.1.6
 joblib==1.4.2
@@ -36,7 +37,7 @@ requests==2.32.3
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
-sentence-transformers==2.2.2
+sentence-transformers==4.0.1
 sentencepiece==0.2.0
 setuptools==78.1.0
 sniffio==1.3.1
@@ -51,3 +52,4 @@ transformers==4.50.1
 triton==3.2.0
 typing_extensions==4.12.2
 urllib3==2.3.0
+uvicorn==0.34.0
